	(epackage-recreate-package-lowlevel): New.
	(epackage-upgrade-package-main): Recreate package if URL moved.
	(epackage-git-error-handler): Obey `epackage--no-error'.
	(epackage--no-error): New variable.
	(epackage-git-url-valid-p): New.
	(epackage-cmd-download-package): Improve error checking: Git URL is not
	listed in Sources List, URL does not respond.

2012-01-13 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-message-error): New.
	(epackage-upgrade-package-git): Rewrite error logic. In
	verbose mode, do not signal error.

2012-01-07 Sat  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el
	(top level): Change all *-epkg-* references to *-epackage-* to
	avoid clashes with epkg.el by Jonas Bernoulli; author
	of Github emacsmirror project.
	(epackage-interactive-p): Remove.
	(called-interactively-p): Add defun if nor defined.

2012-01-06 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--layout-template-info): Rename field
	Elpa to Archve.
	(epackage-lint-extra-buffer-run-other-namespace): New.
	(epackage-devel-information-license-gpl-standard): Improve regexp.
	(epackage-batch-autoload-generate-loaddefs-dir): Rewrite.
	(epackage-devel-generate-loaddefs): Correct call to
	`epackage-autoload-generate-loaddefs-dir'.
	(epackage-info-mode-cmd-email-upstream): Set initial subject
	to include package name.
	(epackage-lint-extra-buffer-run-other-autoload): Check
	interactive.
	(epackage-search-user-customizable): New.
	(epackage-search-user-function): New.
	(epackage-devel-information-license-apache): New.

2012-01-05 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-lint-extra-buffer-run-other-defcustom): New.
	(epackage-lint-extra-buffer-run-lm): Add 'ends here' check.
	(epackage-devel-information-license-gpl-standard): Increase
	search from 70 lines to 400.
	(epackage-interactive-p): New. Emacs 23.3 compatibility.
	(epackage--layout-template-info): Add "Elpa" field. Document thin
	in the spec.